crates/schema-inference/src/snapshots/schema_inference__analyze__test__generator_with_multiple_values.snap
---
source: crates/schema-inference/src/analyze.rs
assertion_line: 42
expression: schema
---
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "type": "object",
  "required": [
    "a_null_value",
    "boolean",
    "number",
    "string"
  ],
  "properties": {
    "a_null_value": {
      "type": "null"
    },
    "boolean": {
      "type": "boolean"
    },
    "number": {
      "type": "integer"
    },
    "string": {
      "type": "string"
    }
  }
}
