crates/schema-inference/src/snapshots/schema_inference__analyze__test__nested_values.snap
---
source: crates/schema-inference/src/analyze.rs
assertion_line: 58
expression: schema
---
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "type": "object",
  "required": [
    "author",
    "id",
    "tags",
    "title"
  ],
  "properties": {
    "author": {
      "type": "object",
      "required": [
        "contact",
        "name"
      ],
      "properties": {
        "contact": {
          "type": "string"
        },
        "name": {
          "type": "string"
        }
      }
    },
    "id": {
      "type": "integer"
    },
    "tags": {
      "type": "array",
      "items": [
        {
          "type": "string"
        }
      ]
    },
    "title": {
      "type": "string"
    }
  }
}
