crates/schema-inference/src/snapshots/schema_inference__analyze__test__string_format_integer_merging-2.snap
---
source: crates/schema-inference/src/analyze.rs
expression: schema
---
{
  "$schema": "https://json-schema.org/draft/2019-09/schema",
  "type": "object",
  "properties": {
    "a": {
      "type": [
        "integer",
        "string"
      ],
      "format": "integer"
    }
  }
}
