crates/schema-inference/src/snapshots/schema_inference__analyze__test__string_format_integer_merging.snap
---
source: crates/schema-inference/src/analyze.rs
expression: schema
---
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "type": "object",
  "required": [
    "a"
  ],
  "properties": {
    "a": {
      "type": [
        "integer",
        "string"
      ],
      "format": "integer"
    }
  }
}
