crates/schema-inference/src/snapshots/schema_inference__analyze__test__string_format_number_merging-2.snap
---
source: crates/schema-inference/src/analyze.rs
expression: schema
---
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "type": "object",
  "required": [
    "a"
  ],
  "properties": {
    "a": {
      "type": [
        "number",
        "string"
      ],
      "format": "number"
    }
  }
}
